--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,6 +2,7 @@
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
+import Newsletter from '../../components/Newsletter.astro';
 import { getCollection } from 'astro:content';
 
 const posts = await getCollection('blog');
@@ -70,6 +71,9 @@ const sortedPosts = posts.sort((a, b) => b.data.date.getTime() - a.data.date.get
         </div>
       </div>
     </div>
+
+    <!-- Newsletter Section -->
+    <Newsletter />
 
     <Footer />
   </div>
