--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -2,6 +2,7 @@
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
+import Newsletter from '../../components/Newsletter.astro';
 import { getCollection } from 'astro:content';
 
 const products = await getCollection('products');
@@ -54,6 +55,9 @@ const products = await getCollection('products');
         </div>
       </div>
     </div>
+
+    <!-- Newsletter Section -->
+    <Newsletter />
 
     <Footer />
   </div>
