--- a/src/pages/produkter-og-kunder/index.astro
+++ b/src/pages/produkter-og-kunder/index.astro
@@ -8,15 +8,15 @@ import { getCollection } from 'astro:content';
 const products = await getCollection('products');
 ---
 
-<BaseLayout title="Products" description="Tools we've built to make your work easier.">
+<BaseLayout title="Produkter" description="Verktøy vi har laget for å gjøre arbeidet ditt enklere.">
   <div class="bg-white">
     <Header />
 
     <div class="bg-white py-24 sm:py-32">
       <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl lg:max-w-4xl">
-          <h2 class="text-pretty text-4xl font-semibold tracking-tight text-gray-900 sm:text-5xl">Our Products</h2>
-          <p class="mt-2 text-lg/8 text-gray-600">Tools we've built to make your work easier.</p>
+          <h2 class="text-pretty text-4xl font-semibold tracking-tight text-gray-900 sm:text-5xl">Våre Produkter</h2>
+          <p class="mt-2 text-lg/8 text-gray-600">Verktøy vi har laget for å gjøre arbeidet ditt enklere.</p>
           <div class="mt-16 space-y-20 lg:mt-20">
             {products.map((product) => (
               <article class="relative isolate flex flex-col gap-8 lg:flex-row">
@@ -45,7 +45,7 @@ const products = await getCollection('products');
                       rel="noopener noreferrer"
                       class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
                     >
-                      Visit product <span aria-hidden="true">→</span>
+                      Besøk produkt <span aria-hidden="true">→</span>
                     </a>
                   </div>
                 </div>
