--- a/src/pages/blogg/[...slug].astro
+++ b/src/pages/blogg/[...slug].astro
@@ -2,6 +2,7 @@
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
+import Breadcrumb from '../../components/Breadcrumb.astro';
 import { getCollection } from 'astro:content';
 
 export async function getStaticPaths() {
@@ -18,6 +19,12 @@ const { Content } = await post.render();
 // Fetch all authors
 const allAuthors = await getCollection('authors');
 const author = allAuthors.find(a => a.slug === post.data.author);
+
+const breadcrumbs = [
+  { label: 'Home', href: '/' },
+  { label: 'Blogg', href: '/blogg' },
+  { label: post.data.title, href: `/blogg/${post.slug}`, current: true }
+];
 ---
 
 <BaseLayout
@@ -27,6 +34,7 @@ const author = allAuthors.find(a => a.slug === post.data.author);
 >
   <div class="bg-white">
     <Header />
+    <Breadcrumb items={breadcrumbs} />
 
     <div class="bg-white px-6 py-32 lg:px-8">
       <div class="mx-auto max-w-3xl text-base/7 text-gray-700">
