wip the first blog posts

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 const navigation = {
   main: [
-    { name: 'Produkter og Kunder', href: '/produkter-og-kunder' },
+    { name: 'Arbeid', href: '/arbeid' },
     { name: 'Blogg', href: '/blogg' },
     { name: 'Kontakt', href: '/kontakt' },
     { name: 'Personvern', href: '/personvern' },
