--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -118,7 +118,7 @@ const featuredArbeid = allArbeid
       <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl text-center">
           <h2 class="text-4xl font-semibold tracking-tight text-balance text-gray-900 sm:text-5xl">Fra bloggen</h2>
-          <p class="mt-2 text-lg/8 text-gray-600">Lær hvordan du kan vokse virksomheten din med våre ekspertråd.</p>
+          <p class="mt-2 text-lg/8 text-gray-600">Vi skriver om forretningsdrift, produktskapning og filosofi</p>
         </div>
         <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
           {latestPosts.map((post) => (
@@ -132,12 +132,9 @@ const featuredArbeid = allArbeid
                   <time datetime={post.data.date.toISOString()} class="text-gray-500">
                     {post.data.date.toLocaleDateString('nb-NO', { year: 'numeric', month: 'short', day: 'numeric' })}
                   </time>
-                  <a
-                    href={post.data.category.href}
-                    class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100"
-                  >
-                    {post.data.category.title}
-                  </a>
+                  {post.data.categories.map((category) => (
+                    <span class="rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600">{category}</span>
+                  ))}
                 </div>
                 <div class="group relative grow">
                   <h3 class="mt-3 text-lg/6 font-semibold text-gray-900 group-hover:text-gray-600">
