updated sitemap and lazy loading of images + optimalization

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,7 +8,7 @@ interface Props {
 const {
   title = 'Iniva',
   description = 'Bygger flotte produkter',
-  image = '/og-image.jpg',
+  image = '/misc/og-image.png',
 } = Astro.props;
 
 const fullTitle = title === 'Iniva' ? title : `${title} | Iniva`;
