--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -3,7 +3,7 @@
     <div class="mx-auto flex max-w-7xl flex-col items-center gap-x-8 gap-y-10 px-6 sm:gap-y-8 lg:px-8 xl:flex-row xl:items-stretch">
       <div class="-mt-8 w-full max-w-2xl xl:-mb-8 xl:w-96 xl:flex-none">
         <div class="relative aspect-2/1 h-full after:absolute after:inset-0 after:rounded-2xl after:inset-ring after:inset-ring-white/15 md:-mx-8 xl:mx-0 xl:aspect-auto">
-          <img src="/testemonial/aleksander.jpg" alt="Aleksander Gjessing" class="absolute inset-0 size-full rounded-2xl bg-gray-800 object-cover shadow-2xl" />
+          <img src="/testemonial/aleksander.jpg" alt="Aleksander Gjessing" loading="lazy" class="absolute inset-0 size-full rounded-2xl bg-gray-800 object-cover shadow-2xl" />
         </div>
       </div>
       <div class="w-full max-w-2xl xl:max-w-none xl:flex-auto xl:px-16 xl:py-24">
