--- a/src/pages/arbeid/index.astro
+++ b/src/pages/arbeid/index.astro
@@ -32,6 +32,7 @@ const breadcrumbs = [
                   <img
                     alt=""
                     src={entry.data.image}
+                    loading="lazy"
                     class="absolute inset-0 size-full rounded-2xl bg-gray-50 object-cover"
                   />
                   <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-900/10" />
