--- a/src/pages/blogg/index.astro
+++ b/src/pages/blogg/index.astro
@@ -35,6 +35,7 @@ const breadcrumbs = [
                   <img
                     alt=""
                     src={post.data.image}
+                    loading="lazy"
                     class="absolute inset-0 size-full rounded-2xl bg-gray-50 object-cover"
                   />
                   <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-900/10" />
@@ -63,7 +64,7 @@ const breadcrumbs = [
                       if (!author) return null;
                       return (
                         <div class="relative flex items-center gap-x-4">
-                          <img alt="" src={author.data.image} class="size-10 rounded-full bg-gray-100" />
+                          <img alt="" src={author.data.image} loading="lazy" class="size-10 rounded-full bg-gray-100" />
                           <div class="text-sm/6">
                             <p class="font-semibold text-gray-900">{author.data.name}</p>
                             <p class="text-gray-600">{author.data.role}</p>
