--- a/src/pages/arbeid/[...slug].astro
+++ b/src/pages/arbeid/[...slug].astro
@@ -5,6 +5,7 @@ import Footer from '../../components/Footer.astro';
 import Breadcrumb from '../../components/Breadcrumb.astro';
 import Newsletter from '../../components/Newsletter.astro';
 import { getCollection } from 'astro:content';
+import { Image } from 'astro:assets';
 
 export async function getStaticPaths() {
   const entries = await getCollection('arbeid');
@@ -52,11 +53,13 @@ const breadcrumbs = [
         </h1>
 
         <figure class="mt-10">
-          <img
-            alt=""
+          <Image
             src={entry.data.image}
+            alt={entry.data.title}
             loading="lazy"
             class="w-full h-auto rounded-2xl bg-gray-50"
+            widths={[600, 900, 1200]}
+            sizes="(max-width: 768px) 100vw, 896px"
           />
         </figure>
 
@@ -77,7 +80,7 @@ const breadcrumbs = [
             {otherArbeid.map((relatedEntry) => (
               <article class="flex flex-col items-start justify-between">
                 <a href={`/arbeid/${relatedEntry.slug}`} class="relative aspect-video sm:aspect-[2/1] lg:aspect-square w-full">
-                  <img src={relatedEntry.data.image} alt="" loading="lazy" class="absolute inset-0 size-full rounded-2xl bg-gray-100 object-cover" />
+                  <Image src={relatedEntry.data.image} alt={relatedEntry.data.title} loading="lazy" class="absolute inset-0 size-full rounded-2xl bg-gray-100 object-cover" widths={[300, 600]} sizes="(max-width: 1024px) 100vw, 400px" />
                   <div class="absolute inset-0 rounded-2xl inset-ring inset-ring-gray-900/10"></div>
                 </a>
                 <div class="flex max-w-xl grow flex-col justify-between">
