--- a/src/pages/arbeid/index.astro
+++ b/src/pages/arbeid/index.astro
@@ -5,6 +5,7 @@ import Footer from '../../components/Footer.astro';
 import Newsletter from '../../components/Newsletter.astro';
 import Breadcrumb from '../../components/Breadcrumb.astro';
 import { getCollection } from 'astro:content';
+import { Image } from 'astro:assets';
 
 const entries = await getCollection('arbeid');
 const sortedEntries = entries.sort((a, b) => a.data.order - b.data.order);
@@ -29,11 +30,13 @@ const breadcrumbs = [
             {sortedEntries.map((entry) => (
               <article class="relative isolate flex flex-col gap-8 lg:flex-row">
                 <a href={`/arbeid/${entry.slug}`} class="relative aspect-video sm:aspect-[2/1] lg:aspect-square lg:w-64 lg:shrink-0">
-                  <img
-                    alt=""
+                  <Image
                     src={entry.data.image}
+                    alt={entry.data.title}
                     loading="lazy"
                     class="absolute inset-0 size-full rounded-2xl bg-gray-50 object-cover"
+                    widths={[256, 512]}
+                    sizes="256px"
                   />
                   <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-900/10" />
                 </a>
