--- a/src/pages/blogg/index.astro
+++ b/src/pages/blogg/index.astro
@@ -5,6 +5,7 @@ import Footer from '../../components/Footer.astro';
 import Newsletter from '../../components/Newsletter.astro';
 import Breadcrumb from '../../components/Breadcrumb.astro';
 import { getCollection } from 'astro:content';
+import { Image } from 'astro:assets';
 
 const posts = await getCollection('blog');
 const sortedPosts = posts.sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
@@ -32,11 +33,13 @@ const breadcrumbs = [
             {sortedPosts.map((post) => (
               <article class="relative isolate flex flex-col gap-8 lg:flex-row">
                 <a href={`/blogg/${post.slug}`} class="relative aspect-video sm:aspect-[2/1] lg:aspect-square lg:w-64 lg:shrink-0">
-                  <img
-                    alt=""
+                  <Image
                     src={post.data.image}
+                    alt={post.data.title}
                     loading="lazy"
                     class="absolute inset-0 size-full rounded-2xl bg-gray-50 object-cover"
+                    widths={[256, 512]}
+                    sizes="256px"
                   />
                   <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-900/10" />
                 </a>
