--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,11 +71,13 @@ const featuredArbeid = allArbeid
             {featuredArbeid.map((entry) => (
               <article class="relative isolate flex flex-col gap-8 lg:flex-row">
                 <a href={`/arbeid/${entry.slug}`} class="relative aspect-video sm:aspect-[2/1] lg:aspect-square lg:w-64 lg:shrink-0">
-                  <img
-                    alt=""
+                  <Image
                     src={entry.data.image}
+                    alt={entry.data.title}
                     loading="lazy"
                     class="absolute inset-0 size-full rounded-2xl bg-gray-50 object-cover"
+                    widths={[256, 512]}
+                    sizes="256px"
                   />
                   <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-900/10" />
                 </a>
@@ -126,7 +128,7 @@ const featuredArbeid = allArbeid
           {latestPosts.map((post) => (
             <article class="flex flex-col items-start justify-between">
               <a href={`/blogg/${post.slug}`} class="relative w-full">
-                <img src={post.data.image} alt="" loading="lazy" class="aspect-video w-full rounded-2xl bg-gray-100 object-cover sm:aspect-2/1 lg:aspect-3/2" />
+                <Image src={post.data.image} alt={post.data.title} loading="lazy" class="aspect-video w-full rounded-2xl bg-gray-100 object-cover sm:aspect-2/1 lg:aspect-3/2" widths={[400, 600, 800]} sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 400px" />
                 <div class="absolute inset-0 rounded-2xl inset-ring inset-ring-gray-900/10"></div>
               </a>
               <div class="flex max-w-xl grow flex-col justify-between">
