--- a/src/components/LogoGrid.astro
+++ b/src/components/LogoGrid.astro
@@ -1,10 +1,18 @@
+---
+import { Image } from 'astro:assets';
+import lappeliten from '../assets/testimonial/lappeliten.webp';
+import medbuddy from '../assets/testimonial/medbuddy.svg';
+import terminalinvest from '../assets/testimonial/terminalinvest.png';
+import veniro from '../assets/testimonial/veniro.svg';
+---
+
 <div class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto grid max-w-lg grid-cols-2 items-center gap-x-8 gap-y-12 sm:max-w-xl sm:grid-cols-4 sm:gap-x-10 sm:gap-y-14 lg:mx-0 lg:max-w-none">
-      <img width="158" height="48" src="/testemonial/lappeliten.webp" alt="Lappeliten" loading="lazy" class="max-h-12 w-full object-contain" />
-      <img width="158" height="48" src="/testemonial/medbuddy.svg" alt="Medbuddy" loading="lazy" class="max-h-12 w-full object-contain" />
-      <img width="158" height="48" src="/testemonial/terminalinvest.png" alt="Terminal Invest" loading="lazy" class="max-h-12 w-full object-contain" />
-      <img width="158" height="48" src="/testemonial/veniro.svg" alt="Veniro" loading="lazy" class="max-h-12 w-full object-contain" />
+      <Image src={lappeliten} alt="Lappeliten" loading="lazy" class="max-h-12 w-full object-contain" widths={[158]} />
+      <Image src={medbuddy} alt="Medbuddy" loading="lazy" class="max-h-12 w-full object-contain" widths={[158]} />
+      <Image src={terminalinvest} alt="Terminal Invest" loading="lazy" class="max-h-12 w-full object-contain" widths={[158]} />
+      <Image src={veniro} alt="Veniro" loading="lazy" class="max-h-12 w-full object-contain" widths={[158]} />
     </div>
   </div>
 </div>
