--- a/src/pages/blogg/index.astro
+++ b/src/pages/blogg/index.astro
@@ -67,7 +67,7 @@ const breadcrumbs = [
                       if (!author) return null;
                       return (
                         <div class="relative flex items-center gap-x-4">
-                          <img alt="" src={author.data.image} loading="lazy" class="size-10 rounded-full bg-gray-100" />
+                          <Image src={author.data.image} alt={author.data.name} loading="lazy" class="size-10 rounded-full bg-gray-100" widths={[40, 80]} sizes="40px" />
                           <div class="text-sm/6">
                             <p class="font-semibold text-gray-900">{author.data.name}</p>
                             <p class="text-gray-600">{author.data.role}</p>
