--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import LogoGrid from '../components/LogoGrid.astro';
 import Newsletter from '../components/Newsletter.astro';
 import { getCollection } from 'astro:content';
 import { Image } from 'astro:assets';
+import heroImage from '../assets/misc/ole-herland-wood2.png';
 
 // Fetch latest 3 blog posts
 const allBlogPosts = await getCollection('blog');
@@ -54,7 +55,7 @@ const featuredArbeid = allArbeid
         </div>
       </div>
       <div class="bg-gray-50 lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-        <img src="/misc/ole-herland-wood2.png" alt="" class="aspect-3/2 object-cover lg:aspect-auto lg:size-full" />
+        <Image src={heroImage} alt="Ole Herland working outdoors" class="aspect-3/2 object-cover lg:aspect-auto lg:size-full" widths={[800, 1200, 1600]} sizes="(max-width: 1024px) 100vw, 50vw" />
       </div>
     </div>
 
@@ -155,7 +156,7 @@ const featuredArbeid = allArbeid
                     if (!author) return null;
                     return (
                       <>
-                        <img alt="" src={author.data.image} loading="lazy" class="size-10 rounded-full bg-gray-100" />
+                        <Image src={author.data.image} alt={author.data.name} loading="lazy" class="size-10 rounded-full bg-gray-100" widths={[40, 80]} sizes="40px" />
                         <div class="text-sm/6">
                           <p class="font-semibold text-gray-900">{author.data.name}</p>
                           <p class="text-gray-600">{author.data.role}</p>
